--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "googleapis": "^39.2.0",
+    "knex": "^0.16.3",
     "mysql": "github:mysqljs/mysql",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
